adding settings cog for settings page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       <link rel="stylesheet" href="assets/css/style.css">
    </head>
    <body>
+      <!-- Settings Toggle Button (Top-Left) -->
+      <button id="settingsButton" class="settings-toggle" aria-label="Settings">⚙</button>
+      
       <!-- Character Selection Screen --> 
       <div class="selection-screen" id="selectionScreen">
          <h2>Select Character Type</h2>
@@ -21,6 +24,7 @@
          </div>
          <button id="startButton">Start Game</button> 
       </div>
+      
       <!-- Game Screen (Initially Hidden) --> 
       <div class="container" id="gameScreen" style="display: none;">
          <div class="character" id="character"></div>
