adding settings container

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
          <div class="message" id="message"></div>
          <div class="back-button" id="backButton">&#x21A9; back</div>
       </div>
+
+      <!-- Settings Screen (Hidden unless selected) -->
+      <div class="container" id="settingsScreen" style="display: none;">
+         <!-- Your settings content here -->
+         <div class="back-button" id="settingsBackButton" aria-label="Go back">↩ back</div>
+      </div>
+      
       <script src="assets/js/app.js"></script> 
    </body>
 </html>
