adding game mode screen

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
       <!-- Settings Toggle Button (Top-Left) -->
       <button id="settingsButton" class="settings-toggle" aria-label="Settings">⚙</button>
       
+      <!-- Game mode screen -->
+      <div class="container" id="gameModeScreen">
+         <h2>Game Mode</h2>
+         <div class="option-container">
+            <!-- Lightning round option -->
+            <div class="option-box" id="lightningRound" aria-label="Lightning Round">
+               Lightning Round
+            </div>
+         </div>
+      </div>
+
       <!-- Character Selection Screen --> 
       <div class="selection-screen" id="selectionScreen">
          <h2>Select Character Type</h2>
