div class for lightning round

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <div class="option-container">
             <!-- Lightning round option -->
             <div class="option-box" id="lightningRound" aria-label="Lightning Round">
-               Lightning Round
+               <div class="label">Lightning Round</div>
             </div>
          </div>
       </div>
