adding back button on character selection screen

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                <div class="label">Katakana</div>
             </div>
          </div>
-         <button id="startButton">Start Game</button> 
+         <button id="startButton">Start Game</button>
+         <div class="back-button" id="selectionBackButton" aria-label="Go back">&#x21A9; back</div>
       </div>
       
       <!-- Game Screen (Initially Hidden) --> 
